more bootstrap layout issues. fix sorting in projectsMonthList

--- a/src/components/controls/form-controls/DatePicker.scss
+++ b/src/components/controls/form-controls/DatePicker.scss
@@ -1,17 +1,7 @@
-// .react-datepicker-wrapper {
-//   width: 100%;
-
-//   .react-datepicker__input-container {
-//     width: 100%;
-//   }
-// }
-
-
-// .react-datepicker-popper {
-//   z-index: 2;
-//   top: 34px !important;
-//   /* needed because we made it inline */
-// }
+.react-datepicker-popper {
+  // Some TextEditor components have z-index 90
+  z-index: 99;
+}
 
 .date-group {
   .react-datepicker-wrapper,
@@ -19,7 +9,7 @@
     /* https://github.com/Hacker0x01/react-datepicker/issues/1672 */
     width: calc(100% - 40px);
 
-    /* to make it exactly the same height as the bootstrap input-group-addons */
+    /* to make it exactly the same height as the bootstrap input-groups */
     display: inline;
 
     // .react-datepicker__day-name,
@@ -43,7 +33,7 @@
     }
   }
 
-  .input-group-append {
+  .input-group-text {
     cursor: pointer;
 
     &:hover {
